docs: /api/replays/web swagger 수정
